fixed input overflow

--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -90,7 +90,7 @@ main {
 }
 
 input {
-  width: 50ch;
+  max-width: 50ch;
   min-height: 1.5rem;
   font-family: sans-serif;
   border: none;
